# codeforces625

./: .gitignore  CMakeLists.txt  README.md  test.bash
src/: PreviousLetter.cc  PreviousLetter.hh  main.cc
tests/: example1.test  example2.test  example3.test  example5.test  example6.test  example7.test
